# program

./: readme.md
editor/: .gitignore  elm.json  package-lock.json  package.json  postcss.config.js  readme.md  tailwind.config.js
editor-pro/: .gitignore  cli.sh  elm.json  package-lock.json  package.json  postcss.config.js  readme.md  tailwind.config.js
editor-pro/built/: index.html
editor-pro/built/plugins/: javascript.js  php.js  terminal.js
editor-pro/css/: main.css  vterm.css
editor-pro/js/: editor.js  main.js
editor-pro/js/features/: fuzzyFinder.js
editor-pro/js/plugins/: elm.js  terminal.js
editor-pro/js/utils/: get-project-path.js  install-cli.js  plugins.js
editor-pro/src/: Decoders.elm  Keybindings.elm  Layout.elm  Lib.elm  Main.elm  Model.elm  Msg.elm  PortHandlers.elm  Ports.elm  Styles.elm  Types.elm  Utils.elm
editor-pro/src-tauri/: Cargo.toml  tauri.conf.json
editor-pro/src-tauri/src/: main.rs
editor-pro/src-tauri/src/filetree/: Cargo.toml
editor-pro/src-tauri/src/filetree/src/: filetree.rs  lib.rs
editor-pro/src-tauri/src/filetree/tests/: test.rs
editor-pro/src-tauri/src/terminal/tests/: sequences_test.rs
editor-pro/src/ContextMenu/: ContextMenu.elm  Decoders.elm  Types.elm
editor-pro/src/FileTree/: ContextMenus.elm  Decoders.elm  Encoders.elm  FileTree.elm  Keybindings.elm  Lib.elm  Model.elm  Styles.elm  Types.elm
editor-pro/src/FuzzyFinder/: FuzzyFinder.elm  Model.elm
editor-pro/src/Notification/: Decoders.elm  Types.elm
editor-pro/testing-codebase/: test.js
editor-test/: .gitignore  elm.json  index.html  main.js  package-lock.json  package.json  readme.md
editor-test/src/: Main.elm  Ports.elm
editor/src/: Editor.elm
editor/src/Editor/: Clipboard.elm  Completions.elm  Constants.elm  Decoders.elm  Errors.elm  (+10 more)
editor/tests/: ClipboardTest.elm  EscapeClearsSelectionTest.elm  MetaPressedWithInsertModeTest.elm  TestCase.elm
terminal/: elm.json  package-lock.json  package.json  readme.md
terminal-pro/: package-lock.json  package.json  readme.md
terminal-pro/built/: index.html
terminal-pro/css/: vterm.css
terminal-pro/js/: main.js  terminals.js  vterm.js
terminal-pro/sandbox/: test-clean.sh  test-un-clean.sh  test.sh
terminal-pro/scripts/: vterm.sh
terminal-pro/src/: Main.elm  PortHandlers.elm  Ports.elm
terminal-pro/src-tauri/: Cargo.toml  tauri.conf.json
terminal-pro/src-tauri/src/: main.rs
terminal-pro/src-tauri/src/terminal/: Cargo.toml
terminal-pro/src-tauri/src/terminal/src/: lib.rs
terminal-pro/src-tauri/src/terminal/tests/: sequences_test.rs
terminal-server/: Cargo.toml
terminal-server/src/: lib.rs  parse.rs  terminal.rs
terminal-server/tests/: sequences_test.rs
terminal-test/: elm.json  index.html  main.js  package-lock.json  package.json  readme.md
terminal-test/src/: Keybindings.elm  Main.elm  Model.elm  Msg.elm  PortHandlers.elm  Ports.elm
terminal-test/tests/: DECALNResetsCursorToHomePosition.elm  DeleteCharacters.elm  DeleteLine.elm  EscDKeepsSameColumn.elm  EscM.elm  PositionCursor.elm  PositionCursor0ShouldBe1.elm  ScrollRegion.elm  TabCompletionsRenderCorrectly.elm  TestCase.elm
terminal/src/: Terminal.elm
(+50 files in other folders)
