[package]
name = "terminal"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
tokio = { version = "1.9.0", features = ["full"] }
portable-pty = { version = "0.4.0" }
lazy_static = "1.4.0"
base64 = "0.13.0"
