[package]
name = "editor-pro"
version = "0.1.0"
description = "EditorPro"
authors = ["Logan Henson"]
license = ""
repository = ""
default-run = "editor-pro"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.7", features = ["api-all"] }
anyhow = { version = "1.0" }
tokio = { version = "1.11.0", features = ["rt", "rt-multi-thread", "macros"] }
terminal = { path = "../../terminal-server" }
filetree = { path = "./src/filetree" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release.package.wry]
debug = true
debug-assertions = true
