[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.7", features = ["api-all", "cli"] }
portable-pty = { version = "0.4.0" }
anyhow = { version = "1.0" }
tokio = { version = "1.9.0", features = ["full"] }
terminal = { path = "./src/terminal" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release.package.wry]
debug = true
debug-assertions = true
